laborations/old-2018-lab1/testsuite/bad/bad122.cc
int main() {
	do { int x = 1; } if (4 == 5) {}
}
